infrastructure/Deployment_manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: ror-app
  name: ror-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ror-app
  template:
    metadata:
      labels:
        app: ror-app
    spec:
      containers:
      - name: ror-app
        image: 076992707442.dkr.ecr.us-east-1.amazonaws.com/rails_app:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
          name: http
          protocol: TCP
