infrastructure/Deployment_manifests/web-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: web-app
  name: web-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web-app
  template:
    metadata:
      labels:
        app: web-app
    spec:
      containers:
      - name: web-app
        image: 076992707442.dkr.ecr.us-east-1.amazonaws.com/webserver:latest       
        imagePullPolicy: Always
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
