infrastructure/Deployment_manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: rails-app
  name: rails-app
spec:
  ports:
    - name: http
      port: 3000
      targetPort: 3000
      protocol: TCP
  selector:
    app: ror-app
